k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-b-svc
spec:
  selector:
    app: backend
  ports:
    - name: ws
      port: 8080
      targetPort: 8080 # backend port (websocket)
  type: ClusterIP
