k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-f-svc
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
