k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: f-svc # frontend service
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 80
  type: ClusterIP

---
# backend service
apiVersion: v1
kind: Service
metadata:
  name: b-svc # backend service
spec:
  selector:
    app: backend
  ports:
    - name: http-ws
      port: 8080
      targetPort: 8080 # backend port (websocket)
  type: ClusterIP
