k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: nginx
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 80
